<resources>
    <string name="app_name">Tetris Portal</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username required</string>
    <string name="prompt_password">Password required</string>
    <string name="prompt_email">E-mail required</string>
    <string name="prompt_current_password">Current password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_new_password_confirmation">Confirm password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register account</string>
    <string name="action_register_done">Send</string>
    <string name="action_change_password">Change</string>

    <string name="vk_app_id">7703517</string>
    <string name="recommendation_subject">Hello</string>
    <string name="recommendation_body">Hello, friend! My highscore is </string>

</resources>
